{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 5,
  "lineage": "abc-123-def",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "i-0a1b2c3d4e5f6",
            "ami": "ami-0c55b159cbfafe1f0",
            "instance_type": "t2.micro",
            "tags": {
              "Name": "WebServer",
              "Environment": "Production"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "i-1b2c3d4e5f6a7",
            "ami": "ami-0c55b159cbfafe1f0",
            "instance_type": "t2.small",
            "tags": {
              "Name": "AppServer",
              "Environment": "Production"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "i-2c3d4e5f6a7b8",
            "ami": "ami-0c55b159cbfafe1f0",
            "instance_type": "t2.medium",
            "tags": {
              "Name": "DBServer",
              "Environment": "Production"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "sg-0abc123def456",
            "name": "allow_ssh",
            "description": "Allow SSH inbound traffic",
            "ingress": [
              {
                "from_port": 22,
                "to_port": 22,
                "protocol": "tcp",
                "cidr_blocks": ["0.0.0.0/0"]
              }
            ],
            "tags": {
              "Name": "SSH Access"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "attributes": {
            "id": "sg-1bcd234efa567",
            "name": "allow_http",
            "description": "Allow HTTP inbound traffic",
            "ingress": [
              {
                "from_port": 80,
                "to_port": 80,
                "protocol": "tcp",
                "cidr_blocks": ["0.0.0.0/0"]
              }
            ],
            "tags": {
              "Name": "HTTP Access"
            }
          }
        }
      ]
    }
  ]
}